# Alg-PD

./: .gitignore  README.md
p1/: LEEME.txt  Makefile  aleatorios3.txt  chiki_copy.txt  main  main.cpp  prueba  prueba.cpp  radixsort  radixsort.cpp  reales1.txt  reales2.txt  reales3.txt  reales4.txt  salida.txt
p1/MergeSort/: Mergesort  Mergesort.cpp  Mergesort.hpp
p1/QuickSort/: QuickSort.hpp  Quicksort  Quicksort.cpp  Quicksort.hpp
p1/Radixsort/: Radixsort  Radixsort.cpp  Radixsort.hpp  chiki.txt
p2/: CMakeCache.txt  CMakeLists.txt  Makefile  Solver.cpp  Solver.hpp  SolverOwn.cpp  SolverOwn.hpp  Tablero.cpp  Tablero.hpp  cmake_install.cmake  foo  main  main.cpp  salida.txt  sudokuSolver  sudokuSolver.cpp  sudoku_1.txt  sudoku_2.txt  sudoku_3.txt  sudoku_4.txt
p2/minisat/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
p2/minisat/minisat/core/: Dimacs.h  Main.cc  OutOfMemoryException.cc  Solver.cc  Solver.h  SolverTypes.cc  SolverTypes.h  ThrowOOMException.cc
p2/minisat/minisat/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Vec.h  XAlloc.h
p2/minisat/minisat/simp/: Main.cc  SimpSolver.cc
p2/minisat/minisat/utils/: Options.cc  Options.h  System.cc  System.h
p2/tablero/: Tablero.cpp  Tablero.hpp
p3/: Karger  Karger.cpp  Makefile  bigGraph.txt  graph.txt  graph1.txt  graph2.txt  randomGraph1.txt
